# Automated-Essay-Grader

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  config.py  corrigir_em_lote.py  docker-make.bat  health_check.py  make-docker.bat  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: prompt.txt  template.docx
data/vector_db/: chroma.sqlite3
scripts/: debug_template.py
services/: ai_service.py  drive_service.py  report_service.py
src/: config.py
src/app/: main.py
src/app/core/: __init__.py  exceptions.py  utils.py  validators.py
src/app/services/: ai_service.py  drive_service.py  report_service.py  vector_service.py
src/app/ui/: __init__.py  components.py  pages.py
src/config/: __init__.py  settings.py
tests/: __init__.py  test_validators.py
